noinst_LTLIBRARIES = libcommon.la
AM_CPPFLAGS = $(CPPFLAGS)
libcommon_la_SOURCES = Param.cpp \
                       TypeMapping.cpp \
                       MessageData.cpp \
                       BasicTypeSerializer.cpp \
                       ArrayBean.cpp AxisTime.cpp \
                       GDefine.cpp \
                       AxisUtils.cpp \
                       AxisTrace.cpp \
                       AxisGenException.cpp \
                       AxisConfig.cpp \
                       AdminUtils.cpp \
                       AxisConfigException.cpp \
                       AxisMessage.cpp \
                       AxisUserAPI.cpp \
                       SoapEnvVersions.cpp

libcommon_la_LIBADD = $(LDFLAGS)
INCLUDES = -I../../include
