noinst_LTLIBRARIES = libsoap.la

AM_CPPFLAGS = $(CPPFLAGS)
libsoap_la_SOURCES = Attribute.cpp \
        Namespace.cpp \
        BasicNode.cpp \
        CharacterElement.cpp \
        ComplexElement.cpp \
        HeaderBlock.cpp \
        SoapBody.cpp \
        SoapDeSerializer.cpp \
        SoapEnvelope.cpp \
        SoapFault.cpp \
        SoapHeader.cpp \
        SoapMethod.cpp \
        SoapSerializer.cpp \
        URIMapping.cpp \
        SoapKeywordMapping.cpp \
        apr_base64.c \
        HexCoder.cpp \
        AxisSoapException.cpp \
        SoapAttachment.cpp \
        SoapAttachementHeaders.cpp \
        xsd/Int.cpp \
        xsd/Integer.cpp \
        xsd/Long.cpp \
        xsd/AnyURI.cpp \
        xsd/Base64Binary.cpp \
        xsd/Boolean.cpp \
        xsd/Date.cpp \
        xsd/DateTime.cpp \
        xsd/Decimal.cpp \
        xsd/Double.cpp \
        xsd/Duration.cpp \
        xsd/Float.cpp \
        xsd/HexBinary.cpp \
        xsd/IAnySimpleType.cpp \
        xsd/NOTATION.cpp \
        xsd/String.cpp \
        xsd/Time.cpp \
        xsd/XSD_QName.cpp

libsoap_la_LIBADD = $(LDFLAGS)
INCLUDES = -I../../include
