noinst_LTLIBRARIES = libwsdd.la
libwsdd_la_SOURCES = WSDDDeployment.cpp \
                WSDDHandler.cpp \
                WSDDService.cpp \
                WSDDTransport.cpp \
                WSDDDocument.cpp

libwsdd_la_LIBADD = -L$(XERCES_HOME)/lib -lxerces-c
INCLUDES = -I$(XERCES_HOME)/include
