noinst_LTLIBRARIES = libcommon.la
AM_CPPFLAGS = $(CPPFLAGS)
libcommon_la_SOURCES = Param.cpp \
                       TypeMapping.cpp \
                       MessageData.cpp \
                       BasicTypeSerializer.cpp \
                       ArrayBean.cpp AxisTime.cpp \
                       GDefine.cpp \
                       AxisUtils.cpp \
                       AxisTrace.cpp \
                       AxisException.cpp \
                       AxisConfig.cpp \
                       AxisSocketUtils.cpp \
                       AdminUtils.cpp \
                       AxisConfigException.cpp

libcommon_la_LIBADD = $(LDFLAGS)
INCLUDES = -I$(AXISCPP_HOME)/include
