noinst_LTLIBRARIES = libengine.la
libengine_la_SOURCES = Axis.cpp \
                AxisEngine.cpp \
                HandlerChain.cpp \
                HandlerLoader.cpp \
                HandlerPool.cpp

libengine_la_LIBADD = -L/usr/local/xerces_c/lib -lxerces-c
INCLUDES = -I/usr/local/xerces_c/include
