noinst_LTLIBRARIES = libwsdd.la

libwsdd_la_SOURCES = WSDDDeployment.cpp \
                WSDDHandler.cpp \
                WSDDService.cpp \
                WSDDTransport.cpp \
                WSDDDocument.cpp

libwsdd_la_LIBADD = -L$(AXISCPP_HOME)/lib/xerces-c -lxerces-c
INCLUDES = -I$(AXISCPP_HOME)/include
