noinst_LTLIBRARIES = libwsdd.la
AM_CPPFLAGS = $(CPPFLAGS)
libwsdd_la_SOURCES = WSDDDeployment.cpp \
                WSDDHandler.cpp \
                WSDDService.cpp \
                WSDDTransport.cpp \
		WSDDKeywords.cpp \
                WSDDDocumentExpat.cpp

libwsdd_la_LIBADD = $(LDFLAGS)
INCLUDES = -I$(AXISCPP_HOME)/include
