bin_PROGRAMS = doclitmathops
SUBDIRS =
AM_CPPFLAGS = $(CPPFLAGS)
doclitmathops_SOURCES = MathOps.cpp \
                  MathOpsClient.cpp \
                  DivByZeroStruct.cpp \
                  MathOps_AxisClientException.cpp
doclitmathops_LDADD   =  @LINKCLIENTLIB@
INCLUDES = -I$(AXISCPP_HOME)/include
