lib_LTLIBRARIES = libdoclitmathops.la
SUBDIRS =
libdoclitmathops_la_SOURCES = MathOps.cpp \
                        MathOpsWrapper.cpp \
                        MathOpsService.cpp \
                        DivByZeroStruct.cpp \
                        AxisServiceException.cpp
libdoclitmathops_la_LIBADD   = $(LDFLAGS)

INCLUDES = -I$(AXISCPP_HOME)/include
