lib_LTLIBRARIES = libmathops.la
SUBDIRS =
libmathops_la_SOURCES = MathOps.cpp \
                        MathOpsWrapper.cpp \
                        MathOpsService.cpp \
                        DivByZeroStruct.cpp \
                        AxisServiceException.cpp
libmathops_la_LIBADD   = $(LDFLAGS)

INCLUDES = -I$(AXISCPP_HOME)/include
