lib_LTLIBRARIES = libaxis2_transport.la
AM_CPPFLAGS = $(CPPFLAGS)
libaxis2_transport_la_SOURCES = Channel.cpp \
                               URL.cpp \
                               Axis2Transport.cpp \
                               AxisTransportException.cpp

libaxis2_transport_la_LIBADD = -lstdc++
INCLUDES = -I../../../include

